Push testt only

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
     <main class="flex flex-col items-center justify-center mb-20">
         <h1 class="text-4xl font-medium mt-10">freeCodeCamp Survey Form</h1>
-        <p class="text-sm mb-10 mt-2">Thank you for taking the time to help us improve the platform</p>
+        <p class="text-sm mb-10 mt-2">Thank you for taking the time to help us improve the platform.</p>
         <div class="form p-9 px-14">
             <form>
                 <div class="mb-4">
