--- a/form.html
+++ b/form.html
@@ -14,15 +14,41 @@
             <form>
                 <div class="mb-4">
                     <label for="name" class="text-sm font-medium">Name</label>
-                    <input type="text" id="name" placeholder="Enter your name" class="mt-2 p-2 w-full border rounded-md input-style">
+                    <input 
+                        type="text" 
+                        id="name" 
+                        name="name"
+                        placeholder="Enter your name" 
+                        class="mt-2 p-2 w-full border rounded-md input-style"
+                        value="" 
+                        required
+                    />
                 </div>
                 <div class="mb-4">
                     <label for="email" class="text-sm font-medium">Email</label>
-                    <input type="text" id="email" placeholder="Enter your email" class="mt-2 p-2 w-full border rounded-md input-style">
+                    <input 
+                        type="email" 
+                        id="email" 
+                        name="email" 
+                        placeholder="Enter your email" 
+                        class="mt-2 p-2 w-full border rounded-md input-style"
+                        value="" 
+                        required
+                    />
                 </div>
                 <div class="mb-4">
                     <label for="age" class="text-sm font-medium">Age</label>
-                    <input type="number" id="age" placeholder="Enter your age" class="mt-2 p-2 w-full border rounded-md input-style">
+                    <input 
+                        type="number" 
+                        id="number" 
+                        name="age"
+                        placeholder="Enter your age" 
+                        class="mt-2 p-2 w-full border rounded-md input-style"
+                        min="12" 
+                        max="100" 
+                        value="" 
+                        required
+                    />
                 </div>
                 <div class="mb-4">
                     <label for="age" class="text-sm font-medium">
@@ -42,14 +68,29 @@
                         Would you recommend freeCodeCamp to a friend?
                     </label>
                     <label class="block mt-4">
-                        <input type="radio" name="gender" class="pointer"> Definitely
-                    </label>
+                        <input 
+                            name="user-recommend"
+                            value="definitely"
+                            type="radio"
+                            class="pointer"
+                        /> Definitely</label
+                    >
                     <label class="block">
-                        <input type="radio" name="gender" class="pointer"> Maybe
-                    </label>
+                        <input 
+                            name="user-recommend"
+                            value="maybe"
+                            type="radio"
+                            class="pointer"
+                        /> Maybe</label
+                    >
                     <label class="block">
-                        <input type="radio" name="gender" class="pointer"> Not sure
-                    </label>
+                        <input 
+                            name="user-recommend"
+                            value="not-sure"
+                            type="radio"
+                            class="pointer"
+                        /> Not sure</label
+                    >
                 </div>
                 <div class="mt-4">
                     <label for="age" class="text-sm font-medium">
@@ -71,35 +112,35 @@
                     <input type="checkbox" id="checkbox1" class="mt-4">
                     <label for="checkbox1" class="ml-2 ">Front-end Projects</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Back-end Projects</label>
+                    <input type="checkbox" id="checkbox2">
+                    <label for="checkbox2" class="ml-2 ">Back-end Projects</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Data Visualization</label>
+                    <input type="checkbox" id="checkbox3">
+                    <label for="checkbox3" class="ml-2 ">Data Visualization</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Challenges</label>
+                    <input type="checkbox" id="checkbox4">
+                    <label for="checkbox4" class="ml-2 ">Challenges</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Open Source Community</label>
+                    <input type="checkbox" id="checkbox5">
+                    <label for="checkbox5" class="ml-2 ">Open Source Community</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Gitter help rooms</label>
+                    <input type="checkbox" id="checkbox6">
+                    <label for="checkbox6" class="ml-2 ">Gitter help rooms</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Videos</label>
+                    <input type="checkbox" id="checkbox7">
+                    <label for="checkbox7" class="ml-2 ">Videos</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">City Meetups</label>
+                    <input type="checkbox" id="checkbox8">
+                    <label for="checkbox8" class="ml-2 ">City Meetups</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Wiki</label>
+                    <input type="checkbox" id="checkbox9">
+                    <label for="checkbox9" class="ml-2 ">Wiki</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Forum</label>
+                    <input type="checkbox" id="checkbox10">
+                    <label for="checkbox0" class="ml-2 ">Forum</label>
                     <br>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1" class="ml-2 ">Additional Courses</label>
+                    <input type="checkbox" id="checkbox11">
+                    <label for="checkbox11" class="ml-2 ">Additional Courses</label>
                 </div>
                 <div class="mt-4">
                     <label for="message">Any comments or suggestions?</label>
